--- a/Personal_Page.html
+++ b/Personal_Page.html
@@ -42,10 +42,12 @@
 						<p id="smt0"class="showMoreText">Chosen Demise is an arena survival game where you choose between sets of upgrades which apply to both the player and the opponents.<br><br>
 						This game was made under 80 hours as part of the challenge and was created with the theme of "choice" in mind.<br><br>
 						For the project I used AI, Navmesh Pathfinding, and Rigidbody Physics.</p>
-						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt0',this)">Show More</a></div>
+						<div class="showMoreBtn"><a class="button"onclick="ShowMoreInfo('smt0',this)">Show More</a></div>
 					</div>
-					<div class="col ssContainer">
-						<div class="ssMedia"><video src="Media/ChosenDemise.mp4"controls autoplay playsinline mute loop preload="none">Video Not Found</video></div>
+					<div class="col">
+						<div class="ssContainer">
+							<div class="ssMedia"><video src="Media/ChosenDemise.mp4"controls autoplay playsinline mute loop preload="none">Video Not Found</video></div>
+						</div>
 					</div>
 				</div>
 			</div>
