--- a/index.html
+++ b/index.html
@@ -36,22 +36,22 @@
 		<main>
 			<div class="sec">
 				<div class="flexContainer">
-					<div class="evenCol">
+					<div class="col">
 						<h2>About Me</h2> 
 						<p> Computer Games Programming Graduate at Staffordshire University 2021.<br>Been programming for 5 years, in which time I have managed to learn a range of programming languages. </p><br/>
 						<h3>Currently looking for a graduate level programming job.</h3>
-						<a class="button"href="Media/CoreyMills_CV.docx"download>CV Download</a>
+						<div class="cv"> <a class="button"href="Media/CoreyMills_CV.docx"download>CV Download</a></div>
 					</div>
-					<div class="evenCol"><img src="Media/ProfilePic.jpg"alt="Profile pic not found!"width=35%></div>
+					<div class="col"><img src="Media/ProfilePic.jpg"alt="Profile pic not found!"width=35%></div>
 				</div>
 			</div>
 			<div class="sec">
 				<div class="flexContainer"> 
-					<div class="evenCol">
+					<div class="col">
 						<h3>Programming Languages</h3>
 						<div class="row"><ul><li><p>C++</p></li><li><p>C#</p></li><li><p>Java</p></li><li><p>HTML</p></li><li><p>CSS</p></li><li><p>JavaScript</p></li><li><p>JQuery</p></li></ul></div>
 					</div>
-					<div class="evenCol"> 
+					<div class="col"> 
 						<h3>Game Engines & API's</h3> 
 						<div class="row"><ul><li><p>Unity</p></li><li><p>Unreal</p></li><li><p>DirectX 11</p></li><li><p>OpenGL</p></li><li><p>SDL</p></li></ul></div>
 					</div>
