--- a/GameJam_Page.html
+++ b/GameJam_Page.html
@@ -41,12 +41,14 @@
 						<p>A game created for "Global Games Jam 2021" using the Unity engine.<br><br><a class="externalLink"href="https://globalgamejam.org/2021/games/x-marks-spot-6">'X' Marks the Spot Submission</a></p>
 						<p id="smt0"class="showMoreText">A game created for the Global Games Jam event, at the Online Staffordshire University site.<br><br>Game was created in a period of 48 hours with a team of 6.<br><br>
 						Within the team my role was to code the functionality and gameplay of all the "puzzles" within the game and the player interactions with them.<br> I also designed some of the modular levels.</p>
-						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt0',this)">Show More</a></div>
+						<div class="showMoreBtn"><a class="button"onclick="ShowMoreInfo('smt0',this)">Show More</a></div>
 					</div>
-					<div class="col ssContainer">
-						<div class="ssMedia"><iframe title="YouTube video player"src="https://www.youtube-nocookie.com/embed/iWRIFyn7rt8?rel=0&autoplay=1&mute=1&enablejsapi=1"allowfullscreen></iframe></div>						
-						<div class="ssMedia"><img src="Media/GGJ2021/X marks the spot_screenshot.jpg"alt="Image Not Found"/></div>						
-						<div class="ssMedia"><img src="Media/GGJ2021/page-manual-two.jpg"alt="Image Not Found"/></div>
+					<div class="col">
+						<div class="ssContainer">
+							<div class="ssMedia"><iframe title="YouTube video player"src="https://www.youtube-nocookie.com/embed/iWRIFyn7rt8?rel=0&autoplay=1&mute=1&enablejsapi=1"allowfullscreen></iframe></div>						
+							<div class="ssMedia"><img src="Media/GGJ2021/X marks the spot_screenshot.jpg"alt="Image Not Found"/></div>						
+							<div class="ssMedia"><img src="Media/GGJ2021/page-manual-two.jpg"alt="Image Not Found"/></div>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -58,10 +60,12 @@
 						<p id="smt1"class="showMoreText">A game created for the Global Games Jam event, at the Staffordshire University site.<br><br>
 						The Game was created in a period of 48 hours with a team of 10. I was one of 2 programmers.<br><br>
 						My role focused on implementing the Gameplay aspects using the blueprint system.</p>
-						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt1',this)">Show More</a></div>
+						<div class="showMoreBtn"><a class="button"onclick="ShowMoreInfo('smt1',this)">Show More</a></div>
 					</div>
-					<div class="col ssContainer">
-						<div class="ssMedia"><video src="Media/GGJ2020/Bermuda.mp4" controls autoplay playsinline mute loop preload="none">Video Not Found</video></div>
+					<div class="col">
+						<div class="ssContainer">
+							<div class="ssMedia"><video src="Media/GGJ2020/Bermuda.mp4" controls autoplay playsinline mute loop preload="none">Video Not Found</video></div>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -73,10 +77,12 @@
 						<p id="smt2"class="showMoreText">The game jam produced the "Soul Cats" game.<br><br>
 						I was one of two junior programmers in the team, my role was to code the gameplay mechanics and the interactions between game objects using physics.<br><br>
 						I also 3D modelled and textured some objects for the game in 3DS MAX, including the "Hammer" shown in the image.</p>
-						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt2',this)">Show More</a></div>
+						<div class="showMoreBtn"><a class="button"onclick="ShowMoreInfo('smt2',this)">Show More</a></div>
 					</div>
-					<div class="col ssContainer">
-						<div class="ssMedia"><img src="Media/SoulCats.jpg"alt="Image Not Found"/></div>
+					<div class="col">
+						<div class="ssContainer">
+							<div class="ssMedia"><img src="Media/SoulCats.jpg"alt="Image Not Found"/></div>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -87,10 +93,12 @@
 						<p>A 5-day game jam during college hours at the UTC@MediaCityUK college, in 2017</p>
 						<p id="smt3"class="showMoreText">In a team of 2, we created 2 small mini-games which parodied Donkey Kong and Pac-Man using the theme of UTC@MediaCityUK.<br><br>
 						The game was created using the Unity engine where I programmed the mini-games, while my partner created the images.</p>
-						<div class="ShowMoreBtn"><a class="button"onclick="ShowMoreInfo('smt3',this)">Show More</a></div>
+						<div class="showMoreBtn"><a class="button"onclick="ShowMoreInfo('smt3',this)">Show More</a></div>
 					</div>
-					<div class="col ssContainer">
-						<div class="ssMedia"><video src="Media/UTC_GameJam.mp4"controls autoplay playsinline mute loop preload="none">Video Not Found</video></div>				
+					<div class="col">
+						<div class="ssContainer">
+							<div class="ssMedia"><video src="Media/UTC_GameJam.mp4"controls autoplay playsinline mute loop preload="none">Video Not Found</video></div>				
+						</div>
 					</div>
 				</div>
 			</div>
