--- a/GameJam_Page.html
+++ b/GameJam_Page.html
@@ -107,7 +107,7 @@
 	</body>
 </html>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script async src="NavMenu.js"></script>
-<script async src="SlideShow.js"></script>
+<script onload="UpdateNav();"async src="NavMenu.js"></script>
+<script onload="Init();"async src="SlideShow.js"></script>
 <script src="MoreInfo.js"></script>
 <script src="TopScript.js"></script>
