--- a/index.html
+++ b/index.html
@@ -62,5 +62,5 @@
 	</body>
 </html>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script async src="NavMenu.js"></script>
+<script onload="UpdateNav();" async src="NavMenu.js"></script>
 <script src="TopScript.js" ></script>
