--- a/Contact_Page.html
+++ b/Contact_Page.html
@@ -38,14 +38,13 @@
 				<div><h2>Contact Me:</h2><p>Please feel free to contact me for any further enquiries.</p></div>
 				<div class="flexContainer">
 					<div class="col">
-						<!-- fix this when you have portfolio email-->
-						<h3>Email:<a class="button"href="mailto:C.M.Mills@outlook.com"target="_blank">C.M.Mills@outlook.com</a></h3>
-						<h3>Mobile: (+44) 7388047323</h3>
+						<p>Email: <a class="externalLink"href="mailto:C.M.Mills@outlook.com"target="_blank">C.M.Mills@outlook.com</a></p>
+						<p>Mobile: (+44) 7388047323</p>
 					</div>
 					<div class="col">
-						<h3>LinkedIn:<a class="button"href="https://www.linkedin.com/in/corey-mills-a68775150/"target="_blank">Corey Mills</a></h3>
-						<h3>Twitter:<a class="button"href="https://twitter.com/bluedino_corey"target="_blank">@bluedino_corey</a></h3>
-						<h3>GitHub:<a class="button"href="https://github.com/CoreyMills"target="_blank">CoreyMills</a></h3>
+						<p>LinkedIn: <a class="externalLink"href="https://www.linkedin.com/in/corey-mills-a68775150/"target="_blank">Corey Mills</a></p>
+						<p>Twitter: <a class="externalLink"href="https://twitter.com/bluedino_corey"target="_blank">@bluedino_corey</a></p>
+						<p>GitHub: <a class="externalLink"href="https://github.com/CoreyMills"target="_blank">CoreyMills</a></p>
 					</div>
 				</div>
 			</div>
