removed showmoretext ids

--- a/GameJam_Page.html
+++ b/GameJam_Page.html
@@ -6,7 +6,7 @@
 		<meta name="description"content="Portfolio website">
 		<meta name="author"content="Corey Mills">
 		<meta name="keywords"content="Corey Mills,Portfolio,Programmer,Computer Games Programmer">
-		<meta name="viewport"content="width=device-width,initial-scale=1.0">
+		<meta name="viewport"content="width=device-width,initial-scale=1">
 		<title>Corey Mills - Portfolio</title>
 	</head>
 	<body>
@@ -39,7 +39,7 @@
 				<div class="flexContainer">
 					<div class="col">
 						<p>A game created for "Global Games Jam 2021" using the Unity engine.<br><br><a class="externalLink"href="https://globalgamejam.org/2021/games/x-marks-spot-6">'X' Marks the Spot Submission</a></p>
-						<p id="smt0"class="showMoreText">A game created for the Global Games Jam event, at the Online Staffordshire University site.<br><br>Game was created in a period of 48 hours with a team of 6.<br><br>
+						<p class="showMoreText">A game created for the Global Games Jam event, at the Online Staffordshire University site.<br><br>Game was created in a period of 48 hours with a team of 6.<br><br>
 						Within the team my role was to code the functionality and gameplay of all the "puzzles" within the game and the player interactions with them.<br> I also designed some of the modular levels.</p>
 						<div class="showMoreBtn"><a class="button"onclick="ShowMoreInfo('smt0',this)">Show More</a></div>
 					</div>
@@ -57,7 +57,7 @@
 				<div class="flexContainer">
 					<div class="col">
 						<p>A game created for "Global Games Jam 2020" using the Unreal engine.<br><br><a class="externalLink"href="https://globalgamejam.org/2020/games/bermuda-6">Bermuda Submission</a></p>
-						<p id="smt1"class="showMoreText">A game created for the Global Games Jam event, at the Staffordshire University site.<br><br>
+						<p class="showMoreText">A game created for the Global Games Jam event, at the Staffordshire University site.<br><br>
 						The Game was created in a period of 48 hours with a team of 10. I was one of 2 programmers.<br><br>
 						My role focused on implementing the Gameplay aspects using the blueprint system.</p>
 						<div class="showMoreBtn"><a class="button"onclick="ShowMoreInfo('smt1',this)">Show More</a></div>
@@ -74,7 +74,7 @@
 				<div class="flexContainer">
 					<div class="col">
 						<p>A week long game jam organised by Phi Dinh and Niall Taylor at UTC@MediaCityUK, to create a game using the Unity engine.</p>
-						<p id="smt2"class="showMoreText">The game jam produced the "Soul Cats" game.<br><br>
+						<p class="showMoreText">The game jam produced the "Soul Cats" game.<br><br>
 						I was one of two junior programmers in the team, my role was to code the gameplay mechanics and the interactions between game objects using physics.<br><br>
 						I also 3D modelled and textured some objects for the game in 3DS MAX, including the "Hammer" shown in the image.</p>
 						<div class="showMoreBtn"><a class="button"onclick="ShowMoreInfo('smt2',this)">Show More</a></div>
@@ -91,7 +91,7 @@
 				<div class="flexContainer">
 					<div class="col">
 						<p>A 5-day game jam during college hours at the UTC@MediaCityUK college, in 2017</p>
-						<p id="smt3"class="showMoreText">In a team of 2, we created 2 small mini-games which parodied Donkey Kong and Pac-Man using the theme of UTC@MediaCityUK.<br><br>
+						<p class="showMoreText">In a team of 2, we created 2 small mini-games which parodied Donkey Kong and Pac-Man using the theme of UTC@MediaCityUK.<br><br>
 						The game was created using the Unity engine where I programmed the mini-games, while my partner created the images.</p>
 						<div class="showMoreBtn"><a class="button"onclick="ShowMoreInfo('smt3',this)">Show More</a></div>
 					</div>
