--- a/Personal_Page.html
+++ b/Personal_Page.html
@@ -6,7 +6,7 @@
 		<meta name="description"content="Portfolio website">
 		<meta name="author"content="Corey Mills">
 		<meta name="keywords"content="Corey Mills,Portfolio,Programmer,Computer Games Programmer">
-		<meta name="viewport"content="width=device-width,initial-scale=1.0">
+		<meta name="viewport"content="width=device-width,initial-scale=1">
 		<title>Corey Mills - Portfolio</title>
 	</head>
 	<body>
@@ -39,7 +39,7 @@
 				<div class="flexContainer">
 					<div class="col">
 						<p>A game created for "Search for a Star 2021" using the Unity engine.<br><br><a class="externalLink"href="https://silent-lunatic.itch.io/chosen-demise">Chosen Demise Submission</a></p>
-						<p id="smt0"class="showMoreText">Chosen Demise is an arena survival game where you choose between sets of upgrades which apply to both the player and the opponents.<br><br>
+						<p class="showMoreText">Chosen Demise is an arena survival game where you choose between sets of upgrades which apply to both the player and the opponents.<br><br>
 						This game was made under 80 hours as part of the challenge and was created with the theme of "choice" in mind.<br><br>
 						For the project I used AI, Navmesh Pathfinding, and Rigidbody Physics.</p>
 						<div class="showMoreBtn"><a class="button"onclick="ShowMoreInfo('smt0',this)">Show More</a></div>
