--- a/Contact_Page.html
+++ b/Contact_Page.html
@@ -16,6 +16,7 @@
 				<div id="mainNav">
 					<ul>
 						<li><a class="button"href="index.html">About Me</a></li>
+						<li><a class="button"href="Industry_Page.html">Industry Projects</a></li>
 						<li><a class="button"href="Education_Page.html">Education Projects</a></li>
 						<li><a class="button"href="GameJam_Page.html">Game Jam Projects</a></li>
 						<li><a class="button"href="Personal_Page.html">Personal Projects</a></li>
@@ -26,9 +27,11 @@
 					<h2 class="dropDownBtn"ontouchstart="FlipDropDownState()">&#8801 </h2>
 					<div class="dropDownContent">
 						<a class="button"href="index.html">About Me</a>
+						<a class="button"href="Industry_Page.html">Industry Projects</a>
 						<a class="button"href="Education_Page.html">Education Projects</a>
 						<a class="button"href="GameJam_Page.html">Game Jam Projects</a>
 						<a class="button"href="Personal_Page.html">Personal Projects</a>
+						<a id="currentPage"class="button"href="Contact_Page.html">Contact</a>
 					</div>
 				</div>
 			</nav>
@@ -39,9 +42,6 @@
 				<div class="flexContainer">
 					<div class="col">
 						<p>Email: <a class="externalLink"href="mailto:C.M.Mills@outlook.com"target="_blank">C.M.Mills@outlook.com</a></p>
-						<p>Mobile: (+44) 7388047323</p>
-					</div>
-					<div class="col">
 						<p>LinkedIn: <a class="externalLink"href="https://www.linkedin.com/in/corey-mills-a68775150/"target="_blank">Corey Mills</a></p>
 						<p>Twitter: <a class="externalLink"href="https://twitter.com/bluedino_corey"target="_blank">@bluedino_corey</a></p>
 						<p>GitHub: <a class="externalLink"href="https://github.com/CoreyMills"target="_blank">CoreyMills</a></p>
@@ -49,7 +49,7 @@
 				</div>
 			</div>
 		</main>
-		<footer><p>Copyright &#169; Corey Mills 2021</p></footer>
+		<footer><p>Copyright &#169; Corey Mills 2023</p></footer>
 	</body>
 </html>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
