--- a/GameJam_Page.html
+++ b/GameJam_Page.html
@@ -16,6 +16,7 @@
 				<div id="mainNav">
 					<ul>
 						<li><a class="button"href="index.html">About Me</a></li>
+						<li><a class="button"href="Industry_Page.html">Industry Projects</a></li>
 						<li><a class="button"href="Education_Page.html">Education Projects</a></li>
 						<li><a id="currentPage"class="button"href="GameJam_Page.html">Game Jam Projects</a></li>
 						<li><a class="button"href="Personal_Page.html">Personal Projects</a></li>
@@ -26,7 +27,9 @@
 					<h2 class="dropDownBtn"ontouchstart="FlipDropDownState()">&#8801 </h2>
 					<div class="dropDownContent">
 						<a class="button"href="index.html">About Me</a> 
+						<a class="button"href="Industry_Page.html">Industry Projects</a>
 						<a class="button"href="Education_Page.html">Education Projects</a>
+						<a id="currentPage"class="button"href="GameJam_Page.html">Game Jam Projects</a>
 						<a class="button"href="Personal_Page.html">Personal Projects</a>
 						<a class="button"href="Contact_Page.html">Contact</a>
 					</div>
@@ -103,7 +106,7 @@
 				</div>
 			</div>
 		</main>
-		<footer><p>Copyright &#169; Corey Mills 2021</p></footer>
+		<footer><p>Copyright &#169; Corey Mills 2023</p></footer>
 	</body>
 </html>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
