--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 				<div id="mainNav">
 					<ul>
 						<li><a id="currentPage"class="button"href="index.html">About Me</a></li>
+						<li><a class="button"href="Industry_Page.html">Industry Projects</a></li>
 						<li><a class="button"href="Education_Page.html">Education Projects</a></li>
 						<li><a class="button"href="GameJam_Page.html">Game Jam Projects</a></li>
 						<li><a class="button"href="Personal_Page.html">Personal Projects</a></li>
@@ -25,6 +26,8 @@
 				<div id="ddNav"class="dropDown">
 					<h2 class="dropDownBtn"ontouchstart="FlipDropDownState()">&#8801 </h2>
 					<div class="dropDownContent">
+						<a id="currentPage"class="button"href="index.html">About Me</a>
+						<a class="button"href="Industry_Page.html">Industry Projects</a>
 						<a class="button"href="Education_Page.html">Education Projects</a>
 						<a class="button"href="GameJam_Page.html">Game Jam Projects</a>
 						<a class="button"href="Personal_Page.html">Personal Projects</a>
