--- a/Education_Page.html
+++ b/Education_Page.html
@@ -38,7 +38,7 @@
 		</header>
 		<main>
 			<div class="sec">
-				<div><h2>Final Year Project<a class="githubProjectLink"href="https://github.com/CoreyMills/FYP_Project"><img src="Media/github.png"alt="Image Not Found"/></a></h2></div>
+				<div><h2>Final Year Project<a class="githubProjectLink"href="https://github.com/CoreyMills/FYP_Project"><img src="Media/Github/github-mark-white.png"alt="Image Not Found"/></a></h2></div>
 				<div class="flexContainer">
 					<div class="col"><p>An Agent-Based Model Simulation which uses a genetic algorithm to test how changing the traits and environmental factors affect the evolution of AI agents.</p>
 						<div class="showMoreText"><p>The simulation placed 40 agents against 40 enemies in a small "arena" for 60 seconds, i was then able to select a range of additional traits and evionmental factors which would affect the agents.<br><br>
@@ -60,7 +60,7 @@
 				</div>
 			</div>
 			<div class="sec">
-				<div><h2>Group Engine/Game Development<a class="githubProjectLink"href="https://github.com/mathewthill/RoguelikeEngine"><img src="Media/github.png"alt="Image Not Found"/></a></h2></div>
+				<div><h2>Group Engine/Game Development<a class="githubProjectLink"href="https://github.com/mathewthill/RoguelikeEngine"><img src="Media/Github/github-mark-white.png"alt="Image Not Found"/></a></h2></div>
 				<div class="flexContainer">
 					<div class="col"><p>In a team of originally 8 members. We planned, designed, and programmed a self-contained rogue-lite engine. Then used the engine to make a small game.</p>
 						<div class="showMoreText"><p>Within the team i took upon the role of programming the AI, weapon, and projectile classes for both the engine and game<br><br>We decided to code basic AI enemies into the engine as all rogue-lite games have some form of enemies; meaning even a developer with no AI experience could make enemies using the engine.<br><br>
@@ -80,7 +80,7 @@
 				</div>
 			</div>
 			<div class="sec">
-				<div><h2>Tower Defense<a class="githubProjectLink"href="https://github.com/CoreyMills/TowerDefense-1.31"><img src="Media/github.png"alt="Image Not Found"/></a></h2></div>
+				<div><h2>Tower Defense<a class="githubProjectLink"href="https://github.com/CoreyMills/TowerDefense-1.31"><img src="Media/Github/github-mark-white.png"alt="Image Not Found"/></a></h2></div>
 				<div class="flexContainer">
 					<div class="col"><p>Single Problem solution found using a genetic algorithm </p>
 						<div class="showMoreText"><p>Unlike the "Flappy Bird" project, this project required the genetic algorithm to find a solution to a single problem.<br><br>
@@ -97,7 +97,7 @@
 				</div>
 			</div>
 			<div class="sec">
-				<div><h2>Evolutionary Flappy Bird<a class="githubProjectLink"href="https://github.com/CoreyMills/FlappyBird"><img src="Media/github.png"alt="Image Not Found"/></a></h2></div>
+				<div><h2>Evolutionary Flappy Bird<a class="githubProjectLink"href="https://github.com/CoreyMills/FlappyBird"><img src="Media/Github/github-mark-white.png"alt="Image Not Found"/></a></h2></div>
 				<div class="flexContainer">
 					<div class="col"><p>Training a neural network birds with a genetic algorithm, to find a multi-problem solution in C++.<br><br>Part of the final year AI module.</p>
 						<div class="showMoreText"><p>The aim of the project was to create a bird that could reach a score of 400. Using the provided framework I programmed a neural network which used a genetic algorithm to develop its weights and biases.<br><br>The neural network used:</p>
@@ -116,7 +116,7 @@
 				</div>
 			</div>
 			<div class="sec">
-				<div><h2>Chess Algorithm<a class="githubProjectLink"href="https://github.com/CoreyMills/Chess-2.0"><img src="Media/github.png"alt="Image Not Found"/></a></h2></div>
+				<div><h2>Chess Algorithm<a class="githubProjectLink"href="https://github.com/CoreyMills/Chess-2.0"><img src="Media/Github/github-mark-white.png"alt="Image Not Found"/></a></h2></div>
 				<div class="flexContainer">
 					<div class="col"><p>Chess Algorithm using C++, as part of the final year AI module.</p>
 						<div class="showMoreText"><p>Given a basic framework which could be used to play chess, i added all the AI elements which make decisions using the mini-max algorithm.<br><br>
@@ -136,7 +136,7 @@
 				</div>
 			</div>
 			<div class="sec">
-				<div><h2>Flocking Simulation<a class="githubProjectLink"href="https://github.com/CoreyMills/Flocking-Boids"><img src="Media/github.png"alt="Image Not Found"/></a></h2></div>
+				<div><h2>Flocking Simulation<a class="githubProjectLink"href="https://github.com/CoreyMills/Flocking-Boids"><img src="Media/Github/github-mark-white.png"alt="Image Not Found"/></a></h2></div>
 				<div class="flexContainer">
 					<div class="col"><p>Flocking Simulation using C++, as part of the final year AI module.</p>
 						<div class="showMoreText"><p>Taking the basic framework which rendered square objects i added the implemented the physics-based movement for the boids(blue) and predator(red).<br><br>
@@ -154,7 +154,7 @@
 				</div>
 			</div>
 			<div class="sec">
-				<div><h2>Low-Level Game Programming<a class="githubProjectLink"href="https://github.com/CoreyMills/RayTracerSmall"><img src="Media/github.png"alt="Image Not Found"/></a></h2></div>
+				<div><h2>Low-Level Game Programming<a class="githubProjectLink"href="https://github.com/CoreyMills/RayTracerSmall"><img src="Media/Github/github-mark-white.png"alt="Image Not Found"/></a></h2></div>
 				<div class="flexContainer">
 					<div class="col"><p> Final year low-level programming module, using C++ and the provided raytracer framework.</p>
 						<div class="showMoreText"><p>Using the framework which was able to use raytracing to render spheres.<br><br>I implemented a range of techniques to manage memory and improve processing time.</p>
@@ -171,7 +171,7 @@
 				</div>
 			</div>
 			<div class="sec">
-				<div><h2>Tank AI<a class="githubProjectLink"href="https://github.com/CoreyMills/Tank-AI"><img src="Media/github.png"alt="Image Not Found"/></a></h2></div>
+				<div><h2>Tank AI<a class="githubProjectLink"href="https://github.com/CoreyMills/Tank-AI"><img src="Media/Github/github-mark-white.png"alt="Image Not Found"/></a></h2></div>
 				<div class="flexContainer">
 					<div class="col"><p>Second year artificial intelligence project to create an AI tank using C++ and the SDL library.</p>
 						<div class="showMoreText"><p>The project included taking a variety of AI techniques to create an efficient self-contained tank AI.<br><br>
@@ -190,7 +190,7 @@
 				</div>
 			</div>
 			<div class="sec">
-				<div><h2>Physics-Engine<a class="githubProjectLink"href="https://github.com/CoreyMills/Physics-Engine"><img src="Media/github.png"alt="Image Not Found"/></a></h2></div>
+				<div><h2>Physics-Engine<a class="githubProjectLink"href="https://github.com/CoreyMills/Physics-Engine"><img src="Media/Github/github-mark-white.png"alt="Image Not Found"/></a></h2></div>
 				<div class="flexContainer">
 					<div class="col"><p>Second year project to create a physics engine using Directx 11 & C++.</p>
 						<div class="showMoreText"><p>Using a DirectX 11 graphics engine as a framework, I added a range complex physics techniques such as:</p>
@@ -211,7 +211,7 @@
 				</div>
 			</div>
 			<div class="sec">
-				<div><h2>Graphics Engine<a class="githubProjectLink"href="https://github.com/CoreyMills/DX11-Framework"><img src="Media/github.png"alt="Image Not Found"/></a></h2></div>
+				<div><h2>Graphics Engine<a class="githubProjectLink"href="https://github.com/CoreyMills/DX11-Framework"><img src="Media/Github/github-mark-white.png"alt="Image Not Found"/></a></h2></div>
 				<div class="flexContainer">
 					<div class="col"><p>Second year project, where DirectX 11 and C++ were used to create a Graphics Engine.</p>						
 						<div class="showMoreText"><p>The project included a range of techniques such as:</p>
@@ -229,7 +229,7 @@
 				</div>
 			</div>
 			<div class="sec">
-				<div><h2>Concurrent Network Battleships<a class="githubProjectLink"href="https://github.com/CoreyMills/Battleships"><img src="Media/github.png"alt="Image Not Found"/></a></h2></div>
+				<div><h2>Concurrent Network Battleships<a class="githubProjectLink"href="https://github.com/CoreyMills/Battleships"><img src="Media/Github/github-mark-white.png"alt="Image Not Found"/></a></h2></div>
 				<div class="flexContainer">
 					<div class="col"><p>Second year project to create a game which used a client-server architecture, programmed in C#.</p>
 						<div class="showMoreText"><p>For the module I created the "Battleships" game using windows forms, 
@@ -251,7 +251,7 @@
 				</div>
 			</div>
 			<div class="sec">
-				<div><h2>Mario & GravityGuy Mini Games<a class="githubProjectLink"href="https://github.com/CoreyMills/Mario-GravityGuy_Uni-Project"><img src="Media/github.png"alt="Image Not Found"/></a></h2></div>
+				<div><h2>Mario & GravityGuy Mini Games<a class="githubProjectLink"href="https://github.com/CoreyMills/Mario-GravityGuy_Uni-Project"><img src="Media/Github/github-mark-white.png"alt="Image Not Found"/></a></h2></div>
 				<div class="flexContainer">
 					<div class="col"><p>First year university project. Created using C++ and the SDL library.</p>
 						<div class="showMoreText"><p>For the module I produced two small mini games which parodied "Mario" and "GravityGuy".<br><br>
