--- a/GameJam_Page.html
+++ b/GameJam_Page.html
@@ -38,7 +38,7 @@
 		</header>
 		<main>
 			<div class="sec">
-				<div><h2>'X' Marks the Spot<a class="githubProjectLink"href="https://github.com/sirmarcomoro/GGJ2021"><img src="Media/github.png"alt="Image Not Found"/></a></h2></div>
+				<div><h2>'X' Marks the Spot<a class="githubProjectLink"href="https://github.com/sirmarcomoro/GGJ2021"><img src="Media/Github/github-mark-white.png"alt="Image Not Found"/></a></h2></div>
 				<div class="flexContainer">
 					<div class="col">
 						<p>A game created for "Global Games Jam 2021" using the Unity engine.<br><br><a class="externalLink"href="https://globalgamejam.org/2021/games/x-marks-spot-6">'X' Marks the Spot Submission</a></p>
@@ -73,7 +73,7 @@
 				</div>
 			</div>
 			<div class="sec">
-				<div><h2>Soul Cats<a class="githubProjectLink"href="https://github.com/CoreyMills/Soulcats"><img src="Media/github.png"alt="Image Not Found"/></a></h2></div>
+				<div><h2>Soul Cats<a class="githubProjectLink"href="https://github.com/CoreyMills/Soulcats"><img src="Media/Github/github-mark-white.png"alt="Image Not Found"/></a></h2></div>
 				<div class="flexContainer">
 					<div class="col">
 						<p>A week long game jam organised by Phi Dinh and Niall Taylor at UTC@MediaCityUK, to create a game using the Unity engine.</p>
