--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<div class="flexContainer">
 					<div class="col">
 						<h2>About Me</h2> 
-						<p> Computer Games Programming Graduate at Staffordshire University 2021.<br>Been programming for 5 years, in which time I have managed to learn a range of programming languages. </p><br/>
+						<p> Gameplay/AI Programmer with 2 years experience in industry, from Oct 2021.<br> Computer Games Programming Graduate at Staffordshire University 2021.<br>Been programming for 8 years in total, in which time I have managed to learn a range of programming languages.</p><br/>
 						<h3>Currently looking for a graduate level programming job.</h3>
 						<div class="cv"> <a class="button"href="Media/CoreyMills_CV.docx"download>CV Download</a></div>
 					</div>
@@ -56,7 +56,7 @@
 					</div>
 					<div class="col"> 
 						<h3>Game Engines & API's</h3> 
-						<div class="row"><ul><li><p>Unity</p></li><li><p>Unreal</p></li><li><p>DirectX 11</p></li><li><p>OpenGL</p></li><li><p>SDL</p></li></ul></div>
+						<div class="row"><ul><li><p>Unreal</p></li><li><p>Unity</p></li><li><p>DirectX 11</p></li><li><p>OpenGL</p></li><li><p>SDL</p></li></ul></div>
 					</div>
 				</div>
 			</div>
