--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					<div class="col">
 						<h2>About Me</h2> 
 						<p> Gameplay/AI Programmer with 2 years experience in industry, from Oct 2021.<br> Computer Games Programming Graduate at Staffordshire University 2021.<br>Been programming for 8 years in total, in which time I have managed to learn a range of programming languages.</p><br/>
-						<h3>Currently looking for a graduate level programming job.</h3>
+						<h3>Currently looking for a Gameplay or AI Junior-Mid level programming job.</h3>
 						<div class="cv"> <a class="button"href="Media/CoreyMills_CV.docx"download>CV Download</a></div>
 					</div>
 					<div class="col"><img src="Media/ProfilePic.jpg"alt="Profile pic not found!"width=35%></div>
